# SuperHud-Editor

./: AUTHORS  ChangeLog  FEATURES  KNOWNBUGS  LICENSE  Makefile.am  README  README.md  TIPS  TODO  UI  configure.ac  create-data-pke.sh  create-pak.sh  superhudeditor-0.3.0.ebuild  superhudeditor-0.4.0.ebuild  superhudeditor.nsi  superhudeditor.sln  superhudeditor.vcproj
artwork/: model.xcf  model_texture.xcf  setupwizard.xcf  supereditor_ico.xcf  superhudeditor_xpm.xcf
data/: data-0.3.0.include  data-0.3.0.pke  pak-0.3.0.include  pak-0.3.0.pke  pak-0.4.0.include  pak-0.4.0.pke  tips.txt
data/cpma/docs/: README.hudspecs  README.superhud
data/cpma/huds/: arqon.cfg  test.cfg
data/cpma/hudspecs/: README.hudspecs
data/docs/: README.hudspecs
data/model/: README.txt  dfegg.mde  dopefish.ms3d  dopefish.mtl
data/q4max/huds/: default.cfg
data/q4max/hudspecs/: README.superhud
data/texture/: default.tga  model.tga
data/webupdater/: README.txt  local.xml  local_test.xml  webupdatedlg.xrc
src/: ElementsCtrlBase.cpp  ElementsCtrlBase.h  GameSelectionDialog.cpp  GameSelectionDialog.h  Makefile  Makefile.am  PositionPropertiesCtrl.cpp  PositionPropertiesCtrl.h  artprovider.h  color4.cpp  color4.h  colorpropertiesctrl.cpp  colorpropertiesctrl.h  command.cpp  command.h  common.h  convertdialog.cpp  convertdialog.h  convertdialog.wxg  cpma_colorpropertiesctrl.cpp  cpma_colorpropertiesctrl.h  cpma_displayctrl.cpp  cpma_displayctrl.h  cpma_element.cpp  cpma_element.h  cpma_elementsctrl.h  cpma_factory.cpp  cpma_factory.h  cpma_fontpropertiesctrl.cpp  cpma_fontpropertiesctrl.h  cpma_hudfile.cpp  cpma_hudfile.h  cpma_imagepropertiesctrl.cpp  cpma_imagepropertiesctrl.h  cpma_miscpropertiesctrl.cpp  cpma_miscpropertiesctrl.h  cpma_propertiesnotebook.cpp  cpma_propertiesnotebook.h  cpma_propertygrid.h  cpma_visibilitypropertiesctrl.cpp  (+104 more)
src/cpma/: colorpropertiesctrl.cpp  colorpropertiesctrl.h  cpmacolorpropertiesctrl.cpp  cpmaelement.h  cpmahudfile.h  displayctrl.cpp  displayctrl.h  element.cpp  element.h  elementsctrl.cpp  elementsctrl.h  factory.cpp  factory.h  fontpropertiesctrl.cpp  fontpropertiesctrl.h  hudfile.cpp  hudfile.h  hudspecs.cpp  hudspecs.h  imagepropertiesctrl.cpp  imagepropertiesctrl.h  miscpropertiesctrl.cpp  miscpropertiesctrl.h  propertiesctrl.cpp  propertiesctrl.h  propertiesnotebook.cpp  propertiesnotebook.h  propertygrid.h  propertygridbase.h  visibilitypropertiesctrl.cpp  visibilitypropertiesctrl.h
src/q4max/: displayctrl.cpp  element.h  elementsctrl.h  factory.cpp  factory.h  hudfile.cpp  hudfile.h  hudspecs.cpp  hudspecs.h  propertiesnotebook.cpp  propertygrid.h  q4maxelement.cpp  q4maxelementsctrl.h  q4maxfactory.h
src/wxpropgrid/: readme-propgrid.txt
src/wxpropgrid-1.2/include/wx/propgrid/: manager.h
src/wxpropgrid-1.2/src/propgrid/: odcombo.cpp  props.cpp
src/wxpropgrid-1.3/: CHANGES.txt  README.txt
src/wxpropgrid-1.3/docs/: Doxyfile
src/wxpropgrid-1.3/docs/html/: annotated.htm  classes.htm  classwxBaseEnumProperty-members.htm  classwxBaseEnumProperty.htm  classwxColourPropertyValue-members.htm  classwxColourPropertyValue.htm  classwxCustomProperty-members.htm  classwxCustomProperty.htm  classwxEnumProperty-members.htm  classwxEnumProperty.htm  classwxPGAttributeStorage-members.htm  classwxPGAttributeStorage.htm  classwxPGCell-members.htm  classwxPGCell.htm  classwxPGCellRenderer-members.htm  classwxPGCellRenderer.htm  classwxPGChoiceEntry-members.htm  classwxPGChoiceEntry.htm  classwxPGChoices-members.htm  classwxPGChoices.htm  classwxPGCommonValue-members.htm  classwxPGCommonValue.htm  classwxPGDefaultRenderer-members.htm  classwxPGDefaultRenderer.htm  classwxPGEditor-members.htm  classwxPGEditor.htm  classwxPGEditorDialogAdapter-members.htm  classwxPGEditorDialogAdapter.htm  classwxPGInDialogValidator-members.htm  classwxPGInDialogValidator.htm  classwxPGMultiButton-members.htm  classwxPGMultiButton.htm  classwxPGPaintData-members.htm  classwxPGPropArgCls-members.htm  classwxPGPropArgCls.htm  classwxPGProperty-members.htm  classwxPGProperty.htm  classwxPGPropertyDataExt-members.htm  classwxPGPropertyDataExt.htm  classwxPGPropertyWithChildren-members.htm  (+88 more)
src/wxpropgrid-1.3/include/wx/propgrid/: advprops.h  editors.h  manager.h  odcombo.h  pg_dox_mainpage.h  propdev.h  propgrid.h  props.h
src/wxpropgrid-1.3/src/: advprops.cpp  editors.cpp  extras_backup.cpp  manager.cpp  odcombo.cpp  propgrid.cpp  props.cpp
src/wxpropgrid/include/wx/propgrid/: propgrid.h
src/wxpropgrid/src/propgrid/: propgrid.cpp
src/xpm/: README
src/xpm/bitmaps/: setupwizard.xpm
src/xpm/icons/: align_bottom.xpm  align_center.xpm  align_left.xpm  align_middle.xpm  align_right.xpm  align_top.xpm  clear.xpm  cpma16.xpm  cpma24.xpm  cpma32.xpm  cpma48.xpm  element_copy.xpm  element_disabled.xpm  element_enabled.xpm  element_paste.xpm  elements_collection.xpm  elements_collection_item.xpm  elements_collection_marker.xpm  elements_collection_title.xpm  postdecorate_insert.xpm  predecorate_insert.xpm  prefs_advanced.xpm  prefs_display.xpm  prefs_misc.xpm  prefs_network.xpm  q4max16.xpm  q4max32.xpm  q4max48.xpm  superhudeditor.xpm
webupdater/: webupdater.cbp  webupdater.vcproj
webupdater/include/wx/: download.h  installer.h  md5.h  stdactions.h  webupdate.h  webupdatectrl.h  webupdatedef.h  webupdatedlg.h
webupdater/src/: download.cpp  installer.cpp  md5.cpp  stdactions.cpp  webapp.cpp  webupdate.cpp  webupdatectrl.cpp  webupdatedlg.cpp  webupdatedlg.xrc
www/: download.php  func.php  index.html  style.css  versioncheck.php
www/webupdater/: remote.xml  remote_test.xml
