SUBDIRS = src

DOCS = AUTHORS ChangeLog COPYING INSTALL NEWS README

# note that this is only for devel... :x we should have everything in a pak file for retail
nobase_dist_pkgdata_DATA = data/cpma/hudspecs.dat data/cpma/texture/background.jpg \
                           data/model/dfegg.mde \
                           data/texture/*.tga \
                           data/tips.txt

#DISTCHECK_CONFIGURE_FLAGS = --with-wx-config=`which wx-config-2.6` --disable-opengl
